--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Route de Classe</string>
+    <string name="app_name">Routine-de-Classe</string>
 </resources>
